--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ ignore =
     .codecov.yml
     .codecov.yml
     .coveragerc
+    .git-blame-ignore-revs
     .pep8speaks.yml
     Announcements.md
     CHANGELOG.md
