--- a/external-deps/qtconsole/.github/workflows/linux-tests.yml
+++ b/external-deps/qtconsole/.github/workflows/linux-tests.yml
@@ -27,6 +27,7 @@ jobs:
         exclude:
           - INSTALL_TYPE: 'conda'
             QT_LIB: 'pyqt6'
+    timeout-minutes: 15
     steps:
       - name: Checkout branch
         uses: actions/checkout@v3
@@ -42,11 +43,12 @@ jobs:
            auto-activate-base: false
            channels: conda-forge
            channel-priority: strict
+           miniforge-variant: Mambaforge
            python-version: ${{ matrix.PYTHON_VERSION }}
       - name: Install dependencies with conda
         if: matrix.INSTALL_TYPE == 'conda'
         shell: bash -l {0}
-        run: conda env update --file requirements/environment.yml
+        run: mamba env update --file requirements/environment.yml
       - name: Install dependencies with pip
         if: matrix.INSTALL_TYPE == 'pip'
         shell: bash -l {0}
@@ -61,7 +63,7 @@ jobs:
           pip list
       - name: Run tests
         shell: bash -l {0}
-        run: xvfb-run --auto-servernum pytest -x -vv -s --full-trace --cov=qtconsole qtconsole
+        run: xvfb-run --auto-servernum pytest -x -vv -s --full-trace --color=yes --cov=qtconsole qtconsole
         env:
           QT_API: ${{ matrix.QT_LIB }}
           PYTEST_QT_API: ${{ matrix.QT_LIB }}
