--- a/external-deps/qtconsole/.github/workflows/macos-tests.yml
+++ b/external-deps/qtconsole/.github/workflows/macos-tests.yml
@@ -20,6 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         PYTHON_VERSION: ['3.7', '3.8', '3.9', '3.10']
+    timeout-minutes: 15
     steps:
       - name: Checkout branch
         uses: actions/checkout@v3
@@ -30,9 +31,12 @@ jobs:
            auto-update-conda: false
            auto-activate-base: false
            python-version: ${{ matrix.PYTHON_VERSION }}
+           miniforge-variant: Mambaforge
+           channels: conda-forge
+           channel-priority: strict
       - name: Install package dependencies
         shell: bash -l {0}
-        run: conda env update --file requirements/environment.yml
+        run: mamba env update --file requirements/environment.yml
       - name: Show environment information
         shell: bash -l {0}
         run: |
@@ -40,4 +44,4 @@ jobs:
           conda list
       - name: Run tests
         shell: bash -l {0}
-        run: pytest -x -vv --cov=qtconsole qtconsole
+        run: pytest -x -vv --color=yes --cov=qtconsole qtconsole
