Update workflow paths to ignore installers-conda directory for unit tests and other installers

--- a/.github/workflows/installer-macos.yml
+++ b/.github/workflows/installer-macos.yml
@@ -10,7 +10,9 @@ on:
       - '**.sh'
       - '!**.md'
       - '!installers/Windows/**'
+      - '!installers-conda/**'
       - '!.github/workflows/installer-win.yml'
+      - '!.github/workflows/installers-conda.yml'
 
   release:
     types:
