--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ ignore =
     img_src/*.xcf
     img_src/*.pdn
     img_src/*.icns
-    installers/**
+    installers*/**
     pytest.ini
     requirements/**
     rope_profiling/**
