--- a/.github/workflows/installers-conda.yml
+++ b/.github/workflows/installers-conda.yml
@@ -59,7 +59,10 @@ jobs:
 
       - name: Create Keychain
         if: github.event_name == 'release' && runner.os == 'macOS'
-        run: ./certkeychain.sh "${MACOS_CERTIFICATE_PWD}" "${MACOS_CERTIFICATE}" "${MACOS_INSTALLER_CERTIFICATE}"
+        run: |
+          ./certkeychain.sh "${MACOS_CERTIFICATE_PWD}" "${MACOS_CERTIFICATE}" "${MACOS_INSTALLER_CERTIFICATE}"
+          CNAME=$(security find-identity -p codesigning -v | pcregrep -o1 "\(([0-9A-Z]+)\)")
+          echo "CNAME=$CNAME" >> $GITHUB_ENV
 
       - name: Build Package Installer
         run: |
@@ -69,7 +72,7 @@ jobs:
               echo "Moving $_codesign..."
               mv $_codesign ${_codesign}.bak
           fi
-          python build_installers.py
+          python build_installers.py --cert-id=$CNAME
           PKG_FILE=$(python build_installers.py --artifact-name)
           PKG_NAME=$(basename $PKG_FILE)
           echo "PKG_FILE=$PKG_FILE" >> $GITHUB_ENV
