Add linux and windows platforms

--- a/.github/workflows/installers-conda.yml
+++ b/.github/workflows/installers-conda.yml
@@ -67,13 +67,18 @@ jobs:
     needs: build-noarch-conda-pkgs
     strategy:
       matrix:
-        target-platform: ["osx-64", "osx-arm64"]
+        target-platform: ["osx-64", "osx-arm64", "linux-64", "win-64"]
         python-version: ["3.9"]
         include:
           - os: macos-11
             target-platform: "osx-64"
           - os: macos-latest
             target-platform: "osx-arm64"
+          - os: ubuntu-latest
+            target-platform: "linux-64"
+          - os: windows-latest
+            target-platform: "win-64"
+
     defaults:
       run:
         shell: bash -l {0}
