--- a/requirements/main.yml
+++ b/requirements/main.yml
@@ -11,7 +11,7 @@ dependencies:
   - cookiecutter >=1.6.0
   - diff-match-patch >=20181111
   - intervaltree >=3.0.2
-  - ipython >=7.31.1
+  - ipython >=8.5.0,<9
   - jedi >=0.17.2,<0.19.0
   - jellyfish >=0.7
   - jsonschema >=3.2.0
